# form-classifier

./: .dockerignore  .env  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: pre-commit.yml
docs/: release_notes.md
fw_gear_file_classifier/: __init__.py  main.py  parser.py
fw_gear_file_classifier/classification_profiles/: MR.yaml  json_forms.yml  main.yml
nacc_gear_form_classifier/: __init__.py  parser.py
nacc_gear_form_classifier/classification_profiles/: json_forms.yml  main.yml
tests/: Dockerfile  conftest.py  test_main.py  test_parser.py  test_utils.py
