[tool.poetry]
name = "fw-gear-file-classifier"
version = "0.4.4"
description = "Generic File Classifier"
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears",
    "Classification"
]
repository = "https://gitlab.com/flywheel-io/flywheel-apps/file-classifier.git"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.9"
fw-core-client = "^1.0.0"
fw-file = "^1.0.0"
flywheel-gear-toolkit = {version = "^0.5.0", extras = ["dicom"]}
fw-classification = "^0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
jupyter = "^1.0.0"
jupyter-client = "6.1.11"
fw-http-testserver = "^1.0.0"
mypy = "^0.931"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
