[tool.poetry]
name = "fw-gear-file-classifier"
version = "0.5.1"
description = "Generic File Classifier"
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears",
    "Classification"
]
repository = "https://gitlab.com/flywheel-io/flywheel-apps/file-classifier.git"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.9"
fw-core-client = "^1.0.0"
fw-file = "^1.0.0"
flywheel-gear-toolkit = "^0.6.0"
nibabel = "^3.2.2"
flywheel-sdk = "^16.8.3"
fw-classification = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
fw-http-testserver = "^1.0.0"
mypy = "^0.931"
pre-commit = "^2.19.0"
isort = "^5.10.1"
pylint = "^2.14.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
