[tool.poetry]
name = "nacc-gear-form-classifier"
version = "0.5.1"
description = "Generic File Classifier"
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears",
    "Classification"
]
repository = "https://github.com/naccdata/form-classifier"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.9"
fw-file = "^1.0.0"
flywheel-gear-toolkit = "^0.6.0"
nibabel = "^3.2.2"
flywheel-sdk = "^16.8.3"
fw-classification = "^0.3.4"
fw-core-client = "^1.1.2"


[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pylint = "^2.17.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
fw-http-testserver = "^1.1.5"
isort = "^5.12.0"
black = "22.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry<1.2"]
build-backend = "poetry.core.masonry.api"
